--- a/cookbooks/vagrant_main/templates/default/django.wsgi.erb
+++ b/cookbooks/vagrant_main/templates/default/django.wsgi.erb
@@ -1,7 +1,7 @@
 import os
 import sys
 
-code_path = '<%= node[:source_folder] %>'
+code_path = '<%= node[:home_folder] %>'
 
 if code_path not in sys.path:
     sys.path.append(code_path)
