some css and style for html!

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 
 {% block content %}
-	Hello blank project
+	<h1>{% trans "Welcome to Django blank project" %}</h1>
 {% endblock content %}
