--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -53,7 +53,22 @@
 	</head>
 
 	<body>
-		{% block content %}{% endblock content %}
+		<div id="container">
+			<div id="header">
+				<h1 id="logo"><a href="{% url home %}"><img src="{{ STATIC_URL }}images/logo.gif" alt="Django"></a></h1>
+				<ul id="nav-global">
+					<li id="nav-homepage">
+						<a href="/admin/">Admin</a>
+					</li>
+				</ul>
+			</div>
+			<div id="main">
+				{% block content %}{% endblock content %}
+			</div>
+			
+		</div>
 	</body>
+
+
 
 </html>
