adding html5 boilerplate
http://html5boilerplate.com/

--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -1,72 +1,92 @@
 {% load i18n %}
-<html>
+
+<!doctype html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<!-- Use the .htaccess and remove these lines to avoid edge case issues.
+	More info: h5bp.com/b/378 -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>{% block page_title %}{% trans 'Django Blank' %}{% endblock page_title %}</title>
+	<meta name="author" content="">
+	<meta name="keywords" content="{% block meta_keywords %}{% endblock meta_keywords %}">
+	<meta name="description" content="{% block meta_description %}{% endblock meta_description %}">
+	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+	<link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}images/favicon.ico">
 	
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta http-equiv="Cache-Control" content="no-cache"/>
-		<meta http-equiv="pragma" content="no-cache">
+	<!-- CSS: implied media=all -->
+	<!-- CSS concatenated and minified via ant build script-->
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
+<!-- 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css"> -->
+	<!-- end CSS-->
 
-		<title>{% block page_title %}{% trans 'Django Blank' %}{% endblock page_title %}</title>
+	<!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+  	<meta property="fb:admins" content="" />
+	{% block facebook_meta %}{% endblock %}
+    	
 
-		<!--[if lt IE 9]><!--><meta http-equiv="X-UA-Compatible" content="IE=7"><!--<![endif]-->
-        
-		<meta name="keywords" content="{% block meta_keywords %}{% endblock meta_keywords %}">
-		<meta name="description" content="{% block meta_description %}{% endblock meta_description %}">
-        
-		<meta name="author" content="">
-		<meta name="google-site-verification" content="" />
-
-		<meta property="fb:admins" content="" />
-		{% block facebook_meta %}
-    	{% endblock %}
-
-		<link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}images/favicon.ico">
-
-		{% block css %}
-			<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css">
-    
-            <!--[if IE 8]>
-                <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/ie8.css">
-            <![endif]-->
-    
-            <!--[if IE 7]>
-                <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/ie7.css">
-            <![endif]-->
-
-		{% endblock %}
-
-		<script type="text/javascript">
-			var __LANGUAGE_CODE = '{{ LANGUAGE_CODE }}';
-		</script>
-
-		{% block js %}
-		{% endblock %}
-
-		<!--[if lt IE 9]>
-			<script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-
-		{% block additional_headers %}{% endblock additional_headers %}
-
-	</head>
-
-	<body>
-		<div id="container">
-			<div id="header">
-				<h1 id="logo"><a href="{% url home %}"><img src="{{ STATIC_URL }}images/logo.gif" alt="Django"></a></h1>
-				<ul id="nav-global">
-					<li id="nav-homepage">
-						<a href="/admin/">Admin</a>
-					</li>
-				</ul>
-			</div>
-			<div id="main">
-				{% block content %}{% endblock content %}
-			</div>
-			
-		</div>
-	</body>
+  	<!-- All JavaScript at the bottom, except for Modernizr / Respond.
+       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
+       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
+	<script src="{{ STATIC_URL }}js/libs/modernizr-2.0.6.min.js"></script>
+	
+	
+	{% block additional_headers %}{% endblock additional_headers %}
+</head>
 
 
+<body>
 
+	<div id="container">
+		<header id="header">
+
+			<h1 id="logo"><a href="{% url home %}"><img src="{{ STATIC_URL }}images/logo.gif" alt="Django"></a></h1>
+			<ul id="nav-global">
+				<li id="nav-homepage">
+					<a href="/admin/">Admin</a>
+				</li>
+			</ul>
+
+		</header>
+    	<div id="main" role="main">
+			{% block content %}{% endblock content %}
+    	</div>
+    	<footer id="footer">
+
+    	</footer>
+	</div> <!--! end of #container -->
+  
+  
+	<!-- JavaScript at the bottom for fast page loading -->
+	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+	<!-- scripts concatenated and minified via ant build script-->
+	<script defer src="{{ STATIC_URL }}js/plugins.js"></script>
+	<script defer src="{{ STATIC_URL }}js/script.js"></script>
+	<!-- end scripts-->
+	
+	<!-- Change UA-XXXXX-X to be your site's ID -->
+	<script>
+		window._gaq = [['_setAccount', 'UAXXXXXXXX1'], ['_trackPageview'], ['_trackPageLoadTime']];
+		Modernizr.load({
+			load : ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
+		});
+
+	</script>
+	<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+		chromium.org/developers/how-tos/chrome-frame-getting-started -->
+	<!--[if lt IE 7 ]>
+		<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+		<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+	<![endif]-->
+  
+</body>
 </html>
