--- a/cookbooks/vagrant_main/templates/default/vagrant.conf.erb
+++ b/cookbooks/vagrant_main/templates/default/vagrant.conf.erb
@@ -1,72 +1,28 @@
 <VirtualHost *:80>
-        ServerAdmin <%= node[:apache][:contact] %>
+    ServerName <%= node[:project_name] %>
+    ServerAdmin <%= node[:apache][:contact] %>
+    LogLevel warn
+    ErrorLog <%= node[:apache][:log_dir] %>/<%= node[:project_name] %>_error.log 
+	CustomLog <%= node[:apache][:log_dir] %>/<%= node[:project_name] %>_access.log combined
 
-		ServerName localhost
-		ServerAlias 0.0.0.0
+    WSGIDaemonProcess <%= node[:project_name] %> user=www-data group=www-data maximum-requests=10000 python-path=/home/vagrant/env/lib/python2.6/site-packages
+    WSGIProcessGroup <%= node[:project_name] %>
 
-        DocumentRoot /var/www/
+    WSGIScriptAlias / <%= node[:home_folder] %>/../deploy/django.wsgi
 
-        # WSGI module config
-        WSGIScriptAlias / <%= node[:apache][:dir] %>/sites-available/django.wsgi
-                
-        <Directory />
-                Options FollowSymLinks
-                AllowOverride None
-        </Directory>
-        <Directory /var/www/>
-                Options Indexes FollowSymLinks MultiViews
-                AllowOverride None
-                Order allow,deny
-                allow from all
-                
-                # This directive allows us to have apache2's default start page
-                # in /apache2-default/, but still have / go to the right place
-                #RedirectMatch ^/$ /apache2-default/
-        </Directory>
 
-		Alias /media/ /var/www/<%= node[:project_name] %>/media/
-		Alias /static/ /var/www/<%= node[:project_name] %>/static/
-		
-		<Directory /var/www/<%= node[:project_name] %>/>
-			Order allow,deny
-			Allow from all
-		</Directory>
+    <Directory <%= node[:home_folder] %>/../deploy>
+        Order deny,allow
+        Allow from all
+    </Directory>
 
-        ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
-        <Directory "/usr/lib/cgi-bin">
-                AllowOverride None
-                Options ExecCGI -MultiViews +SymLinksIfOwnerMatch
-                Order allow,deny
-                Allow from all
-        </Directory>
-
-        ErrorLog <%= node[:apache][:log_dir] %>/error.log 
-
-        # Possible values include: debug, info, notice, warn, error, crit,
-        # alert, emerg.
-        LogLevel warn
-        CustomLog <%= node[:apache][:log_dir] %>/access.log combined
-        ServerSignature On
-
-        Alias /doc/ "/usr/share/doc/"
-        <Directory "/usr/share/doc/">
-            Options Indexes MultiViews FollowSymLinks
-            AllowOverride None
-            Order deny,allow
-            Deny from all
-            Allow from 127.0.0.0/255.0.0.0 ::1/128
-        </Directory>
-
-        <% if node[:platform] == "centos" || node[:platform] == "redhat" || node[:platform] == "fedora" -%>
-        #
-        # This configuration file enables the default "Welcome"
-        # page if there is no default index page present for
-        # the root URL.  To disable the Welcome page, comment
-        # out all the lines below.
-        #
-        <LocationMatch "^/+$">
-            Options -Indexes
-            ErrorDocument 403 /error/noindex.html
-        </LocationMatch>
-        <% end -%>
+	Alias /media/ /var/www/<%= node[:project_name] %>/media/
+	Alias /static/ /var/www/<%= node[:project_name] %>/static/
+	
+	<Directory /var/www/<%= node[:project_name] %>/>
+		Order allow,deny
+		Allow from all
+	</Directory>
+	
 </VirtualHost>
+
